# core-segmentation

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
segment_core/: CMakeLists.txt  CoreSeg.py
segment_core/Resources/Finetune/data3d/: masks.npy  slices.npy
segment_core/Resources/UI/: CoreSeg.ui
